--- a/templates/product.html
+++ b/templates/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ürünler</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
@@ -14,12 +14,13 @@
             <div class="product">
                 <h2>{{ product.name }}</h2>
                 <p>Fiyat: {{ product.price }} TL</p>
-                <a href="/add_to_cart/{{ product.id }}" class="button">Sepete Ekle</a>
+                <a href="{{ url_for('add_to_cart', product_id=product.id) }}" class="button">Sepete Ekle</a>
             </div>
             {% endfor %}
         </div>
         <div class="links">
-            <a href="/cart">Sepete Git</a> | <a href="/">Anasayfa</a>
+            <a href="{{ url_for('cart') }}">Sepete Git</a> | 
+            <a href="{{ url_for('home') }}">Anasayfa</a>
         </div>
     </div>
 </body>
